--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-NEXT_PUBLIC_NHOST_SUBDOMAIN=YOUR_NHOST_APP_SUBDOMAIN
-NEXT_PUBLIC_NHOST_REGION=YOUR_NHOST_APP_REGION
+NEXT_PUBLIC_NHOST_SUBDOMAIN=localhost
+NEXT_PUBLIC_NHOST_REGION=
+NEXT_PUBLIC_HASURA_GRAPHQL_URL=http://localhost:1337/v1/graphql
