--- a/nhost/config.yaml
+++ b/nhost/config.yaml
@@ -19,7 +19,7 @@ auth:
       blocked_email_domains: ''
       blocked_emails: ''
     url:
-      allowed_redirect_urls: ''
+      allowed_redirect_urls: 'http://localhost:3000'
   anonymous_users_enabled: false
   client_url: http://localhost:3000
   disable_new_users: false
