--- a/package.json
+++ b/package.json
@@ -1,53 +1,59 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "concurrently -n codegen,next \"pnpm dev:codegen\" \"pnpm dev:next\"",
+    "dev:nhost": "nhost dev",
+    "dev:codegen": "graphql-codegen --watch",
+    "dev:next": "next",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc",
-    "codegen": "graphql-codegen --config graphql.config.yaml --errors-only"
+    "codegen": "graphql-codegen"
   },
   "dependencies": {
-    "@fontsource/inter": "^4.5.11",
-    "@headlessui/react": "^1.6.6",
-    "@heroicons/react": "^1.0.6",
-    "@nhost/nextjs": "^1.7.0",
-    "@nhost/react": "^0.12.0",
-    "@tanstack/react-query": "^4.0.10",
+    "@fontsource/inter": "^4.5.14",
+    "@graphql-typed-document-node/core": "^3.1.1",
+    "@headlessui/react": "^1.7.7",
+    "@heroicons/react": "^2.0.13",
+    "@next/font": "^13.1.2",
+    "@nhost/nextjs": "^1.13.2",
+    "@nhost/react": "^1.13.2",
     "@types/lodash.debounce": "^4.0.7",
-    "graphql": "^16.5.0",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.1.0",
     "lodash.debounce": "^4.0.8",
     "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.34.0",
-    "tailwind-merge": "^1.6.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.42.1",
+    "tailwind-merge": "^1.8.1"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^2.11.2",
-    "@graphql-codegen/typescript-operations": "^2.5.2",
-    "@graphql-codegen/typescript-react-query": "^4.0.0",
+    "@graphql-codegen/cli": "^2.16.4",
+    "@graphql-codegen/client-preset": "^1.2.6",
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.2",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.20.0",
-    "eslint-config-next": "^12.2.3",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
+    "autoprefixer": "^10.4.13",
+    "concurrently": "^7.6.0",
+    "eslint": "^8.32.0",
+    "eslint-config-next": "^13.1.2",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "lint-staged": "^13.0.3",
+    "lint-staged": "^13.1.0",
     "next-unused": "^0.0.6",
-    "postcss": "^8.4.14",
-    "prettier": "^2.7.1",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.3",
     "prettier-plugin-tailwind-css": "^1.5.0",
-    "tailwindcss": "^3.1.6",
+    "tailwindcss": "^3.2.4",
     "tailwindcss-text-fill-stroke": "^1.1.2",
-    "typescript": "4.7.4"
+    "ts-node": "^10.9.1",
+    "typescript": "4.9.4"
   }
 }
