--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dev": "concurrently -n codegen,next \"pnpm dev:codegen\" \"pnpm dev:next\"",
     "dev:nhost": "nhost dev",
     "dev:codegen": "graphql-codegen --watch",
-    "dev:next": "next",
+    "dev:next": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -18,12 +18,11 @@
     "@heroicons/react": "^2.0.13",
     "@next/font": "^13.1.2",
     "@nhost/nextjs": "^1.13.2",
-    "@nhost/react": "^1.13.2",
     "@types/lodash.debounce": "^4.0.7",
     "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
     "lodash.debounce": "^4.0.8",
-    "next": "latest",
+    "next": "^13.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
